objects/tfn_CMA_Region__c.object
<CustomObject>
    <fields>
        <fullName>tfn_CMA_Region_Area_Percentage__c</fullName>
        <label>CMA Region Area Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_CMA_Region_Area__c</fullName>
        <label>CMA Region Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Locality__c</fullName>
        <label>Locality</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>CMA Region</label>
    <nameField>
        <label>CMA Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMA Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>